# MachineLearning_cpp

./: CMakeLists.txt  README.md
BaseClass/: CMakeLists.txt
BaseClass/header/: basemodel.hpp
BaseClass/src/: basemodel.cpp
LinearRegression/: CMakeLists.txt
LinearRegression/header/: linearRegression.hpp
LinearRegression/src/: linearRegression.cpp
Preprocess/: CMakeLists.txt
Preprocess/header/: preprocess.hpp
Preprocess/src/: preprocess.cpp
Test/: main.cpp
